[gd_scene load_steps=24 format=3 uid="uid://cdp21melrkaep"]

[ext_resource type="TileSet" uid="uid://dsntvsfcov3kf" path="res://Level/moon_tileset.tres" id="1_7871s"]
[ext_resource type="SpriteFrames" uid="uid://batd5fcqiq2fx" path="res://Player/player_sprite_frames.tres" id="2_373r8"]
[ext_resource type="Script" path="res://Player/Player.gd" id="2_p03jk"]
[ext_resource type="Script" path="res://Level/Level.gd" id="2_qn437"]
[ext_resource type="Resource" uid="uid://da3d7042yonen" path="res://Level/Crops/moon_wheat.tres" id="3_g61yd"]
[ext_resource type="Script" path="res://GUI/ToolGUI.gd" id="4_i0hmv"]
[ext_resource type="Resource" uid="uid://digrf2r5b0p0h" path="res://Level/Crops/lunar_sprinkles.tres" id="4_o1p1q"]
[ext_resource type="Script" path="res://Player/InventoryComponent.gd" id="5_0ppol"]
[ext_resource type="Script" path="res://GUI/PhoneGUI.gd" id="9_kceb6"]
[ext_resource type="Script" path="res://GUI/InventoryGUI.gd" id="10_u7prv"]
[ext_resource type="Texture2D" uid="uid://duwmw3oitb6i5" path="res://GUI/selection_marker.png" id="11_8edbx"]
[ext_resource type="Script" path="res://Level/Quests/QuestsGUI.gd" id="11_725wh"]
[ext_resource type="Texture2D" uid="uid://c46lapoj3kgt8" path="res://Level/Currency/unicoin_sprite.png" id="11_736ha"]
[ext_resource type="Script" path="res://Level/CurrencyGUI.gd" id="12_ed3dq"]
[ext_resource type="Script" path="res://GUI/SelectionMarker.gd" id="12_fbvmq"]
[ext_resource type="PackedScene" uid="uid://c6jj0bvpw078h" path="res://Level/Quests/quest_display.tscn" id="12_nsnn6"]
[ext_resource type="Script" path="res://Level/Quests/QuestManager.gd" id="15_wrucv"]
[ext_resource type="Resource" uid="uid://b6tsrspqx0wkg" path="res://Level/Quests/quest_campaign_1.tres" id="16_oiwbj"]
[ext_resource type="Resource" uid="uid://d115d6u3v35l7" path="res://Level/Quests/quest_campaign_2.tres" id="17_k2pda"]
[ext_resource type="Script" path="res://Level/Currency/CurrencyManager.gd" id="20_wew0j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i4osl"]
radius = 17.0
height = 60.0

[sub_resource type="LabelSettings" id="LabelSettings_qaotf"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_0t5le"]
font_size = 48

[node name="Level" type="TileMap"]
tile_set = ExtResource("1_7871s")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(2, 65536, 2, 3, 65536, 2, 4, 65536, 2, 5, 131072, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 65545, 65536, 2, 65544, 65536, 2, 65543, 65536, 2, 65542, 65536, 2, 65538, 0, 2, 65537, 65536, 2, 131074, 0, 2, 131075, 0, 2, 131076, 131072, 2, 131079, 65536, 2, 131080, 65536, 2, 131081, 65536, 2, 196609, 65536, 2, 196610, 65536, 2, 196611, 131072, 2, 196614, 0, 2, 196615, 0, 2, 196616, 0, 2, 196617, 0, 2, 262145, 0, 2, 262146, 65536, 2, 262148, 65536, 2, 327690, 0, 2, 262154, 0, 2, 262155, 0, 2, 196619, 65536, 2, 131083, 131072, 2, 65547, 131072, 2, 11, 65536, 2, 10, 65536, 2, 65546, 0, 2, 131082, 0, 2, 196618, 131072, 2, 393226, 65536, 2, 393225, 65536, 2, 393224, 131072, 2, 393222, 65536, 2, 262153, 131072, 2, 327691, 0, 2, 393227, 0, 2, 458763, 65536, 2, 458762, 0, 2, 458761, 65536, 2, 327682, 131072, 2, 393220, 65536, 2, 458756, 65536, 2, 458752, 0, 2, 458760, 65536, 2, 12, 131072, 2, 65548, 0, 2, 131085, 65536, 2, 196621, 0, 2, 262157, 65536, 2, 327693, 0, 2, 393230, 131072, 2, 458766, 65536, 2, 458764, 65536, 2, 393228, 0, 2, 65550, 0, 2, 14, 65536, 2, 131084, 0, 2, 13, 0, 2, 65549, 65536, 2, 196620, 65536, 2, 262156, 65536, 2, 131086, 0, 2, 196622, 0, 2, 262158, 0, 2, 393229, 0, 2, 458765, 131072, 2, 327692, 0, 2, 327694, 131072, 2, 524288, 131072, 2, 524289, 65536, 2, 524290, 0, 2, 524291, 0, 2, 524292, 0, 2, 524294, 0, 2, 524295, 131072, 2, 524296, 0, 2, 524297, 0, 2, 524298, 65536, 2, 524299, 65536, 2, 524300, 65536, 2, 524301, 131072, 2, 524302, 65536, 2, 131071, 65536, 2, 65536, 65536, 2, 0, 0, 2, 1, 65536, 2, 131072, 65536, 2, 196608, 0, 2, 262144, 0, 2, 327680, 65536, 2, 393216, 0, 2, 393217, 131072, 2, 327681, 65536, 2, 458753, 131072, 2, 458754, 65536, 2, 393218, 0, 2, 393219, 65536, 2, 327683, 0, 2, 262147, 131072, 2, 327684, 0, 2, 327685, 65536, 2, 262149, 0, 2, 196613, 65536, 2, 131077, 0, 2, 65541, 65536, 2, 65540, 131072, 2, 65539, 0, 2, 131078, 65536, 2, 196612, 65536, 2, 262150, 0, 2, 327686, 65536, 2, 327687, 65536, 2, 262151, 0, 2, 262152, 0, 2, 327688, 0, 2, 327689, 131072, 2, 393223, 0, 2, 458759, 131072, 2, 458758, 65536, 2, 458757, 0, 2, 393221, 65536, 2, 524293, 0, 2, 458755, 65536, 2, 131073, 0, 2, -196613, 0, 2, -131077, 0, 2, -65541, 0, 2, -5, 0, 2, 65531, 0, 2, 131067, 0, 2, 196603, 0, 2, 262139, 0, 2, 327675, 0, 2, 393211, 0, 2, 458747, 0, 2, 524283, 0, 2, 589819, 0, 2, 655355, 0, 2, 720891, 0, 2, 786427, 0, 2, 851963, 0, 2, 917499, 0, 2, 983035, 0, 2, 1048571, 0, 2, -196612, 0, 2, -131076, 65536, 2, -65540, 0, 2, -4, 0, 2, 65532, 0, 2, 131068, 0, 2, 196604, 0, 2, 262140, 0, 2, 327676, 0, 2, 393212, 131072, 2, 458748, 0, 2, 524284, 0, 2, 589820, 0, 2, 655356, 0, 2, 720892, 0, 2, 786428, 0, 2, 851964, 0, 2, 917500, 0, 2, 983036, 0, 2, 1048572, 0, 2, -196611, 0, 2, -131075, 65536, 2, -65539, 0, 2, -3, 0, 2, 65533, 0, 2, 131069, 0, 2, 196605, 0, 2, 262141, 131072, 2, 327677, 131072, 2, 393213, 0, 2, 458749, 65536, 2, 524285, 0, 2, 589821, 0, 2, 655357, 65536, 2, 720893, 0, 2, 786429, 0, 2, 851965, 0, 2, 917501, 0, 2, 983037, 0, 2, 1048573, 0, 2, -196610, 0, 2, -131074, 65536, 2, -65538, 0, 2, -2, 0, 2, 65534, 0, 2, 131070, 131072, 2, 196606, 131072, 2, 262142, 0, 2, 327678, 0, 2, 393214, 65536, 2, 458750, 0, 2, 524286, 0, 2, 589822, 0, 2, 655358, 65536, 2, 720894, 0, 2, 786430, 0, 2, 851966, 131072, 2, 917502, 0, 2, 983038, 0, 2, 1048574, 0, 2, -196609, 0, 2, -131073, 65536, 2, -65537, 65536, 2, -1, 131072, 2, 65535, 131072, 2, 196607, 0, 2, 262143, 65536, 2, 327679, 65536, 2, 393215, 0, 2, 458751, 65536, 2, 524287, 0, 2, 589823, 65536, 2, 655359, 0, 2, 720895, 131072, 2, 786431, 131072, 2, 851967, 0, 2, 917503, 0, 2, 983039, 0, 2, 1048575, 0, 2, -262144, 0, 2, -196608, 131072, 2, -131072, 131072, 2, -65536, 0, 2, 589824, 131072, 2, 655360, 0, 2, 720896, 0, 2, 786432, 0, 2, 851968, 0, 2, 917504, 0, 2, 983040, 0, 2, -262143, 0, 2, -196607, 65536, 2, -131071, 0, 2, -65535, 65536, 2, 589825, 0, 2, 655361, 0, 2, 720897, 0, 2, 786433, 0, 2, 851969, 0, 2, 917505, 131072, 2, 983041, 0, 2, -262142, 0, 2, -196606, 65536, 2, -131070, 0, 2, -65534, 65536, 2, 589826, 0, 2, 655362, 0, 2, 720898, 0, 2, 786434, 0, 2, 851970, 131072, 2, 917506, 0, 2, 983042, 0, 2, -262141, 0, 2, -196605, 65536, 2, -131069, 65536, 2, -65533, 0, 2, 589827, 0, 2, 655363, 0, 2, 720899, 131072, 2, 786435, 131072, 2, 851971, 0, 2, 917507, 0, 2, 983043, 0, 2, -262140, 0, 2, -196604, 65536, 2, -131068, 0, 2, -65532, 0, 2, 589828, 0, 2, 655364, 131072, 2, 720900, 0, 2, 786436, 0, 2, 851972, 0, 2, 917508, 65536, 2, 983044, 0, 2, -262139, 0, 2, -196603, 65536, 2, -131067, 0, 2, -65531, 131072, 2, 589829, 0, 2, 655365, 0, 2, 720901, 0, 2, 786437, 0, 2, 851973, 65536, 2, 917509, 0, 2, 983045, 0, 2, -262138, 0, 2, -196602, 65536, 2, -131066, 131072, 2, -65530, 0, 2, 589830, 131072, 2, 655366, 0, 2, 720902, 0, 2, 786438, 0, 2, 851974, 65536, 2, 917510, 0, 2, 983046, 0, 2, -262137, 0, 2, -196601, 65536, 2, -131065, 0, 2, -65529, 0, 2, 589831, 0, 2, 655367, 0, 2, 720903, 0, 2, 786439, 65536, 2, 851975, 0, 2, 917511, 0, 2, 983047, 0, 2, -262136, 0, 2, -196600, 65536, 2, -131064, 0, 2, -65528, 0, 2, 589832, 0, 2, 655368, 0, 2, 720904, 65536, 2, 786440, 0, 2, 851976, 0, 2, 917512, 0, 2, 983048, 0, 2, -262135, 0, 2, -196599, 0, 2, -131063, 0, 2, -65527, 0, 2, 589833, 0, 2, 655369, 0, 2, 720905, 65536, 2, 786441, 0, 2, 851977, 0, 2, 917513, 0, 2, 983049, 131072, 2, -262134, 0, 2, -196598, 0, 2, -131062, 0, 2, -65526, 0, 2, 589834, 0, 2, 655370, 65536, 2, 720906, 0, 2, 786442, 0, 2, 851978, 0, 2, 917514, 131072, 2, 983050, 0, 2, -262133, 0, 2, -196597, 0, 2, -131061, 0, 2, -65525, 0, 2, 589835, 65536, 2, 655371, 0, 2, 720907, 0, 2, 786443, 0, 2, 851979, 131072, 2, 917515, 0, 2, 983051, 0, 2, -262132, 0, 2, -196596, 0, 2, -131060, 0, 2, -65524, 65536, 2, 589836, 131072, 2, 655372, 0, 2, 720908, 0, 2, 786444, 0, 2, 851980, 131072, 2, 917516, 0, 2, 983052, 0, 2, -262131, 0, 2, -196595, 0, 2, -131059, 0, 2, -65523, 65536, 2, 589837, 65536, 2, 655373, 0, 2, 720909, 0, 2, 786445, 131072, 2, 851981, 0, 2, 917517, 0, 2, 983053, 0, 2, -262130, 0, 2, -196594, 0, 2, -131058, 0, 2, -65522, 65536, 2, 589838, 65536, 2, 655374, 0, 2, 720910, 0, 2, 786446, 0, 2, 851982, 0, 2, 917518, 0, 2, 983054, 0, 2, -262129, 0, 2, -196593, 0, 2, -131057, 65536, 2, -65521, 0, 2, 15, 0, 2, 65551, 0, 2, 131087, 0, 2, 196623, 131072, 2, 262159, 131072, 2, 327695, 0, 2, 393231, 65536, 2, 458767, 0, 2, 524303, 0, 2, 589839, 65536, 2, 655375, 0, 2, 720911, 0, 2, 786447, 0, 2, 851983, 0, 2, 917519, 65536, 2, 983055, 0, 2, -262128, 0, 2, -196592, 0, 2, -131056, 0, 2, -65520, 0, 2, 16, 0, 2, 65552, 131072, 2, 131088, 131072, 2, 196624, 0, 2, 262160, 0, 2, 327696, 0, 2, 393232, 65536, 2, 458768, 65536, 2, 524304, 65536, 2, 589840, 131072, 2, 655376, 65536, 2, 720912, 0, 2, 786448, 0, 2, 851984, 65536, 2, 917520, 0, 2, 983056, 0, 2, -262127, 0, 2, -196591, 0, 2, -131055, 0, 2, -65519, 131072, 2, 17, 131072, 2, 65553, 65536, 2, 131089, 65536, 2, 196625, 65536, 2, 262161, 65536, 2, 327697, 65536, 2, 393233, 0, 2, 458769, 0, 2, 524305, 131072, 2, 589841, 0, 2, 655377, 65536, 2, 720913, 0, 2, 786449, 0, 2, 851985, 65536, 2, 917521, 0, 2, 983057, 0, 2, -262126, 0, 2, -196590, 65536, 2, -131054, 65536, 2, -65518, 65536, 2, 18, 0, 2, 65554, 0, 2, 131090, 0, 2, 196626, 0, 2, 262162, 0, 2, 327698, 0, 2, 393234, 131072, 2, 458770, 131072, 2, 524306, 0, 2, 589842, 0, 2, 655378, 0, 2, 720914, 0, 2, 786450, 65536, 2, 851986, 0, 2, 917522, 0, 2, 983058, 0, 2, -262125, 0, 2, -196589, 0, 2, -131053, 0, 2, -65517, 0, 2, 19, 0, 2, 65555, 0, 2, 131091, 0, 2, 196627, 0, 2, 262163, 0, 2, 327699, 131072, 2, 393235, 0, 2, 458771, 0, 2, 524307, 0, 2, 589843, 0, 2, 655379, 0, 2, 720915, 65536, 2, 786451, 0, 2, 851987, 0, 2, 917523, 0, 2, 983059, 0, 2, -262124, 0, 2, -196588, 0, 2, -131052, 0, 2, -65516, 0, 2, 20, 0, 2, 65556, 0, 2, 131092, 0, 2, 196628, 0, 2, 262164, 0, 2, 327700, 0, 2, 393236, 0, 2, 458772, 0, 2, 524308, 0, 2, 589844, 0, 2, 655380, 0, 2, 720916, 0, 2, 786452, 0, 2, 851988, 0, 2, 917524, 0, 2, 983060, 0, 2)
script = ExtResource("2_qn437")
crops = Array[Resource("res://Level/Crops/CropResource.gd")]([ExtResource("3_g61yd")])
fertilisers = Array[Resource("res://Level/Crops/FertiliserResource.gd")]([ExtResource("4_o1p1q")])

[node name="Entities" type="Node2D" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(234, 110)
motion_mode = 1
script = ExtResource("2_p03jk")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_i4osl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = ExtResource("2_373r8")

[node name="SeedInventory" type="Node" parent="Player"]
script = ExtResource("5_0ppol")

[node name="ProduceInventory" type="Node" parent="Player"]
script = ExtResource("5_0ppol")

[node name="FertiliserInventory" type="Node" parent="Player"]
script = ExtResource("5_0ppol")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -5.0
offset_right = -1.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToolGUI" type="VBoxContainer" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -66.0
offset_right = 201.0
offset_bottom = -10.0
grow_vertical = 0
script = ExtResource("4_i0hmv")

[node name="ToolText" type="Label" parent="CanvasLayer/GUI/ToolGUI"]
layout_mode = 2
size_flags_vertical = 3
text = "Current Tool:"

[node name="CurrentToolText" type="Label" parent="CanvasLayer/GUI/ToolGUI"]
layout_mode = 2
size_flags_vertical = 3
text = "Tiller"

[node name="PhoneGUI" type="TabContainer" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 99.0
offset_top = -255.0
offset_right = -102.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_kceb6")

[node name="Inventory" type="Control" parent="CanvasLayer/GUI/PhoneGUI"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory"]
layout_mode = 1
offset_left = 55.0
offset_top = 14.0
offset_right = 279.0
offset_bottom = 84.0
text = "Inventory"
label_settings = SubResource("LabelSettings_qaotf")

[node name="InventorySections" type="HBoxContainer" parent="CanvasLayer/GUI/PhoneGUI/Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = 103.0
offset_right = -55.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer"]
layout_mode = 2
text = "Seeds
"

[node name="Label2" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer" node_paths=PackedStringArray("inventory")]
layout_mode = 2
size_flags_vertical = 2
script = ExtResource("10_u7prv")
inventory = NodePath("../../../../../../../Player/SeedInventory")

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer2"]
layout_mode = 2
text = "Produce"

[node name="Label2" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer2" node_paths=PackedStringArray("inventory")]
layout_mode = 2
size_flags_vertical = 2
script = ExtResource("10_u7prv")
inventory = NodePath("../../../../../../../Player/ProduceInventory")

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer3"]
layout_mode = 2
text = "Fertiliser"

[node name="Label3" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer3" node_paths=PackedStringArray("inventory")]
layout_mode = 2
size_flags_vertical = 2
script = ExtResource("10_u7prv")
inventory = NodePath("../../../../../../../Player/FertiliserInventory")

[node name="Control" type="Control" parent="CanvasLayer/GUI/PhoneGUI/Inventory"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -264.0
offset_top = 21.0
offset_right = -18.0
offset_bottom = 85.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GUI/PhoneGUI/Inventory/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("11_736ha")

[node name="Label" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Inventory/Control" node_paths=PackedStringArray("currency_manager")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -25.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
text = "100000"
label_settings = SubResource("LabelSettings_0t5le")
script = ExtResource("12_ed3dq")
currency_manager = NodePath("../../../../../../CurrencyManager")

[node name="Quests" type="Control" parent="CanvasLayer/GUI/PhoneGUI" node_paths=PackedStringArray("quest_manager")]
visible = false
layout_mode = 2
script = ExtResource("11_725wh")
quest_manager = NodePath("../../../../QuestManager")

[node name="Label" type="Label" parent="CanvasLayer/GUI/PhoneGUI/Quests"]
layout_mode = 0
offset_left = 55.0
offset_top = 14.0
offset_right = 279.0
offset_bottom = 84.0
text = "Quests"
label_settings = SubResource("LabelSettings_qaotf")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/PhoneGUI/Quests"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 58.0
offset_top = 102.0
offset_right = -43.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestDisplay1" parent="CanvasLayer/GUI/PhoneGUI/Quests/HBoxContainer" instance=ExtResource("12_nsnn6")]
layout_mode = 2

[node name="QuestDisplay2" parent="CanvasLayer/GUI/PhoneGUI/Quests/HBoxContainer" instance=ExtResource("12_nsnn6")]
layout_mode = 2

[node name="QuestDisplay3" parent="CanvasLayer/GUI/PhoneGUI/Quests/HBoxContainer" instance=ExtResource("12_nsnn6")]
layout_mode = 2

[node name="QuestDisplay4" parent="CanvasLayer/GUI/PhoneGUI/Quests/HBoxContainer" instance=ExtResource("12_nsnn6")]
layout_mode = 2

[node name="SelectionMarker" type="Sprite2D" parent="." node_paths=PackedStringArray("reference_node")]
texture = ExtResource("11_8edbx")
script = ExtResource("12_fbvmq")
reference_node = NodePath("../Player")

[node name="QuestManager" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("15_wrucv")
quests = Array[Resource("res://Level/Quests/QuestResource.gd")]([ExtResource("16_oiwbj"), ExtResource("17_k2pda")])
player = NodePath("../Player")

[node name="CurrencyManager" type="Node" parent="."]
script = ExtResource("20_wew0j")

[connection signal="tool_changed" from="Player" to="CanvasLayer/GUI/ToolGUI" method="_on_player_tool_changed"]
[connection signal="opened_menu" from="CanvasLayer/GUI/PhoneGUI" to="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer/Label2" method="_on_phone_gui_opened_menu"]
[connection signal="opened_menu" from="CanvasLayer/GUI/PhoneGUI" to="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer2/Label2" method="_on_phone_gui_opened_menu"]
[connection signal="opened_menu" from="CanvasLayer/GUI/PhoneGUI" to="CanvasLayer/GUI/PhoneGUI/Inventory/InventorySections/VBoxContainer3/Label3" method="_on_phone_gui_opened_menu"]
[connection signal="opened_menu" from="CanvasLayer/GUI/PhoneGUI" to="CanvasLayer/GUI/PhoneGUI/Quests" method="_on_phone_gui_opened_menu"]
